# MIRAGE

./: README.md  pyproject.toml
src/CLIP-selection/: CLIP-selection.py
src/change_detection/: binarize_heatmaps.py  calibrate_masks.sh  change_detection_pipeline.py
src/generation_pipeline/: main.py  mask_generation.py
src/generation_pipeline/json_files/: mvtec_final_defect_synonyms.json  mvtec_num_images_per_category.json  visa_final_defect_synonyms.json  visa_num_images_per_category.json
src/survey/: evaluate_survey.py  survey_server.py
