[project]
name = "mirage"
version = "1.0.0"
description = "MIRAGE: Model-agnostic Industrial Realistic Anomaly Generation and Evaluation for Visual Anomaly Detection"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "tqdm>=4.67.1",
    "torch>=2.0.0",
    "flask>=3.1.3",
    "anomalib==0.7",
    "crfseg>=1.0.0",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "borders>=1.4.0",
    "pillow>=12.0.0",
    "tabulate>=0.9.0",
    "trueskill>=0.4.5",
    "numpy>=1.26.0,<2",
    "matplotlib>=3.10.7",
    "transformers>=5.0.0",
    "scikit-learn>=1.6.0",
    "ultralytics>=8.4.14",
    "google-genai>=1.49.0",
    "scikit-image>=0.26.0",
    "opencv-contrib-python>=4.10.0",
]

[tool.uv]
override-dependencies = [
    "timm>=1.0.0",
    "opencv-python>=4.10.0,<4.10.1 ; python_version < '3'",
    "opencv-python-headless>=4.10.0,<4.10.1 ; python_version < '3'",
]
